@@ -21,7 +21,7 @@
 
 require_once dirname(__FILE__).'/js/configuration.host.edit.js.php';
 
-$divTabs = new CTabView(array('remember' => 1));
+$divTabs = new CTabView();
 if (!isset($_REQUEST['form_refresh'])) {
 	$divTabs->setSelected(0);
 }
