@@ -470,23 +470,26 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .darkblue .ui-slider-vertical .ui-slider-range-max { top: 0; }
 
 /*
- * jQuery UI Tabs 1.8.9
+ * jQuery UI Tabs 1.10.3
+ * http://jqueryui.com
  *
- * Copyright 2011, AUTHORS.txt (http://jqueryui.com/about)
- * Dual licensed under the MIT or GPL Version 2 licenses.
+ * Copyright 2013 jQuery Foundation and other contributors
+ * Released under the MIT license.
  * http://jquery.org/license
  *
  * http://docs.jquery.com/UI/Tabs#theming
  */
-.darkblue .ui-tabs { position: relative; padding: .2em; zoom: 1; } /* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
+.darkblue .ui-tabs { position: relative; padding: .2em; }
 .darkblue .ui-tabs .ui-tabs-nav { margin: 0; padding: .2em .2em 0; }
-.darkblue .ui-tabs .ui-tabs-nav li { list-style: none; float: left; position: relative; top: 1px; margin: 0 .2em 1px 0; border-bottom: 0 !important; padding: 0; white-space: nowrap; }
+.darkblue .ui-tabs .ui-tabs-nav li { list-style: none; float: left; position: relative; top: 0; margin: 1px .2em 0 0; border-bottom-width: 0; padding: 0; white-space: nowrap; }
 .darkblue .ui-tabs .ui-tabs-nav li a { float: left; padding: .5em 1em; text-decoration: none; }
-.darkblue .ui-tabs .ui-tabs-nav li.ui-tabs-selected { margin-bottom: 0; padding-bottom: 1px; }
-.darkblue .ui-tabs .ui-tabs-nav li.ui-tabs-selected a, .darkblue .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .darkblue .ui-tabs .ui-tabs-nav li.ui-state-processing a { cursor: text; }
-.darkblue .ui-tabs .ui-tabs-nav li a, .darkblue .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a { cursor: pointer; } /* first selector in group seems obsolete, but required to overcome bug in Opera applying cursor: text overall if defined elsewhere... */
+.darkblue .ui-tabs .ui-tabs-nav li.ui-tabs-active { margin-bottom: -1px; padding-bottom: 1px; }
+.darkblue .ui-tabs .ui-tabs-nav li.ui-tabs-active a,
+.darkblue .ui-tabs .ui-tabs-nav li.ui-state-disabled a,
+.darkblue .ui-tabs .ui-tabs-nav li.ui-tabs-loading a { cursor: text; }
+.darkblue .ui-tabs .ui-tabs-nav li a,
+.darkblue .ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-active a { cursor: pointer; }
 .darkblue .ui-tabs .ui-tabs-panel { display: block; border-width: 0; padding: 1em 1.4em; background: none; }
-.darkblue .ui-tabs .ui-tabs-hide { display: none !important; }
 
 /*
  * jQuery UI Datepicker 1.8.9
